Fixed remove selected nodes, it was removing root nodes and remove non root nodes but they were already removed by the parent. Closes #17

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -194,9 +194,7 @@
                     renderer.createGroup(prompt("id"), prompt("name"));
                 });
                 jwerty.key('X', function () {
-                    renderer.selectedNodes().forEach(function (node) {
-                        graph.removeNode(node);
-                    });
+                    renderer.removeSelectedNodes();
                 });
                 window.graph = graph;
                 window.renderer = renderer;
