Add pandora library and refactore JSONLoader using it.

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -25,6 +25,7 @@
     <!-- Vendors -->
     <script src="../bower_components/jwerty/jwerty.js"></script>
     <script src="../bower_components/Snap.svg/dist/snap.svg.js"></script>
+    <script src="../bower_components/pandora/lib/pandora.js"></script>
     <!-- CodeGraph library -->
     <script src="../lib/index.js"></script>
     <script src="../lib/utils/vec2.js"></script>
