--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -37,7 +37,7 @@
     <script src="../lib/graph/utils/container.js"></script>
     <script src="../lib/graph/nodes/group.js"></script>
     <script src="../lib/graph/nodes/point.js"></script>
-    <script src="../lib/graph/nodes/model.js"></script>
+    <script src="../lib/graph/models/model.js"></script>
     <script src="../lib/graph/models/getter.js"></script>
     <script src="../lib/graph/models/picker.js"></script>
     <script src="../lib/graph/models/action.js"></script>
