Added interactjs for handling drag and drop support. (also compatible for mobile) Closes #24

--- a/elements/code-graph.html
+++ b/elements/code-graph.html
@@ -24,6 +24,7 @@
     </template>
     <!-- Vendors -->
     <script src="../bower_components/jwerty/jwerty.js"></script>
+    <script src="../bower_components/interact/interact.js"></script>
     <script src="../bower_components/Snap.svg/dist/snap.svg.js"></script>
     <script src="../bower_components/pandora/lib/pandora.js"></script>
     <!-- CodeGraph library -->
