Refactore polymer element and make it more generic.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <link rel="import" href="elements/code-graph.html">
+    <link rel="import" href="elements/cg-graph.html">
 </head>
 <style>
     html, body {
@@ -17,6 +17,6 @@
     }
 </style>
 <body>
-<code-graph></code-graph>
+<cg-graph theme="default" url="examples/graph.json"></cg-graph>
 </body>
 </html>
