--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     }
 </style>
 <body>
-<cg-graph theme="dude" url="examples/graph.json"></cg-graph>
+    <cg-graph theme="default" url="examples/graph.json"></cg-graph>
 </body>
 </html>
