--- a/elements/cg-graph.html
+++ b/elements/cg-graph.html
@@ -1,29 +1,17 @@
 <!--
 It's the most important polymer component of CodeGraph. It creates the SVG graph and handle user inputs interactions
 to add blocks/groups, remove or move them.
-
-@attribute url {String} This is the url of the graph data to load. If you create the graph like so
-    <cg-graph url="path/to/graph.json"></cg-graph> the graph will be loaded from the given url.
-@attribute theme {String?} This is the theme to apply on this graph. A theme is composed of 2 files, the config and
-    the stylesheet. All themes are stored in CodeGraph's themes/ folder. If you create the graph like so
-    <cg-graph url="graph.json" theme="dude"></cg-graph> the files themes/dude.json and themes/dude.css will be loaded.
 -->
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
-<link rel="import" href="../elements/cg-error.html">
+<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <polymer-element name="cg-graph" attributes="theme url">
     <template>
-        <link rel="stylesheet" href="../themes/base.css">
+        <link rel="stylesheet" href="cg-graph.css">
         <core-ajax id="config" url="themes/{{theme}}.json" handleAs="json" auto></core-ajax>
         <core-ajax id="data" url="{{url}}" handleAs="json" auto></core-ajax>
-        <style>
-            #cg {
-                width: 100%;
-                height: 100%;
-            }
-        </style>
-        <svg id="cg"></svg>
-        <cg-error message="The error message goes here!"></cg-error>
+        <svg id="graph"></svg>
+        <paper-toast id="error"></paper-toast>
     </template>
     <!-- Vendors -->
     <script src="../bower_components/jwerty/jwerty.js"></script>
@@ -59,97 +47,5 @@ to add blocks/groups, remove or move them.
     <script src="../lib/renderer/render-connection.js"></script>
     <script src="../lib/serialization/json-saver.js"></script>
     <script src="../lib/serialization/json-loader.js"></script>
-    <script>
-        Polymer({
-            theme: "dude",
-            data: null,
-            config: null,
-
-            /**
-             * Dynamically load a theme to apply on the graph.
-             * @param name {String} the name of the theme to apply
-             */
-            addTheme: function (name) {
-                var link = document.createElement('link');
-                link.type = 'text/css';
-                link.rel = 'stylesheet';
-                link.href = '../themes/' + name + '.css';
-                this.shadowRoot.appendChild(link);
-                this.element.convertSheetsToStyles(this.shadowRoot);
-            },
-
-            /**
-             * Create the graph when its config and data are loaded.
-             */
-            createGraph: function () {
-                var paper = Snap(this.$.cg);
-                var graph = new cg.Graph();
-                var loader = new cg.JSONLoader();
-                var saver = new cg.JSONSaver();
-                var renderer = new cg.Renderer(paper);
-                loader.on("error", function (error) {
-                    console.log(arguments);
-                    throw error;
-                });
-                saver.on("error", function (error) {
-                    console.log(arguments);
-                    throw error;
-                });
-                graph.on("error", function (error) {
-                    alert(error.message);
-                });
-                renderer.on("picker.edit", function (picker) {
-                    var value = prompt("New value: ");
-                    if (picker.model.valueType === "vec2" || picker.model.valueType === "vec3") {
-                        value = value.split(" ");
-                    }
-                    picker.value = value;
-                });
-                renderer.initialize(graph, this.config);
-                loader.load(graph, this.data);
-                renderer.render(graph);
-                jwerty.key('A', function () {
-                    var _id = graph.getNextBlockId();
-                    var modelName = prompt("model");
-                    var model = graph.getModel(modelName);
-                    if (model === undefined) {
-                        alert("Undefined model " + modelName + ".");
-                    } else {
-                        var action = new cg.Block(_id, model, renderer._mousePosition.clone());
-                        graph.addNode(action, graph);
-                    }
-                });
-                jwerty.key('G', function () {
-                    var _id = graph.getNextGroupId();
-                    renderer.createGroup(_id, prompt("name"));
-                });
-                jwerty.key('X', function () {
-                    renderer.removeSelectedNodes();
-                });
-                window.graph = graph;
-                window.renderer = renderer;
-                window.loader = loader;
-                window.saver = saver;
-            },
-
-            /**
-             * Load config and data then call createGraph().
-             */
-            ready: function () {
-                this.addTheme(this.theme);
-                this.$.config.addEventListener("core-complete", function () {
-                    this.config = this.$.config.response;
-                    if (this.data !== null) {
-                        this.createGraph();
-                    }
-                }.bind(this));
-                this.$.data.addEventListener("core-complete", function () {
-                    this.data = this.$.data.response;
-                    if (this.config !== null) {
-                        this.createGraph();
-                    }
-                }.bind(this));
-            }
-        });
-    </script>
+    <script src="cg-graph.js"></script>
 </polymer-element>
