--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="index.css">
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="bower_components/core-icons/av-icons.html">
     <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import" href="bower_components/paper-button/paper-button.html">
+    <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
     <link rel="import" href="elements/cg-graph.html">
 </head>
 <body vertical layout fullbleed unresolved>
@@ -19,16 +21,24 @@
         <core-toolbar id="header">
             <paper-icon-button src="images/dude_logo.png"></paper-icon-button>
             <span flex></span>
-            <!--<paper-button class="cg-toolbar-button"><core-icon icon="add-circle"></core-icon> add</paper-button>-->
-            <!--<paper-button class="cg-toolbar-button"><core-icon icon="remove-circle"></core-icon> remove</paper-button>-->
-            <!--<paper-button class="cg-toolbar-button"><core-icon icon="undo"></core-icon> undo</paper-button>-->
-            <!--<paper-button class="cg-toolbar-button"><core-icon icon="redo"></core-icon> redo</paper-button>-->
-            <!--<paper-button class="cg-toolbar-button"><core-icon icon="fullscreen"></core-icon> select</paper-button>-->
-            <paper-icon-button icon="add-circle"></paper-icon-button>
-            <paper-icon-button icon="remove-circle"></paper-icon-button>
-            <paper-icon-button icon="undo"></paper-icon-button>
-            <paper-icon-button icon="redo"></paper-icon-button>
-            <paper-icon-button icon="fullscreen"></paper-icon-button>
+            <core-tooltip label="add a group">
+                <paper-icon-button icon="av:my-library-add"></paper-icon-button>
+            </core-tooltip>
+            <core-tooltip label="add a block">
+                <paper-icon-button icon="add-box"></paper-icon-button>
+            </core-tooltip>
+            <core-tooltip label="remove the selected groups and blocks">
+                <paper-icon-button disabled icon="delete"></paper-icon-button>
+            </core-tooltip>
+            <core-tooltip label="box selection">
+                <paper-icon-button icon="fullscreen"></paper-icon-button>
+            </core-tooltip>
+            <core-tooltip label="undo the last action">
+                <paper-icon-button icon="undo"></paper-icon-button>
+            </core-tooltip>
+            <core-tooltip label="redo the last action">
+                <paper-icon-button disabled icon="redo"></paper-icon-button>
+            </core-tooltip>
         </core-toolbar>
         <cg-graph theme="dude" url="examples/graph.json"></cg-graph>
     </core-header-panel>
