--- a/index.html
+++ b/index.html
@@ -1,49 +1,21 @@
 <!doctype html>
 <html>
-<head>
-    <title>CodeGraph</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="index.css">
-    <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
-    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
-    <link rel="import" href="bower_components/core-icons/av-icons.html">
-    <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="bower_components/paper-button/paper-button.html">
-    <link rel="import" href="bower_components/core-tooltip/core-tooltip.html">
-    <link rel="import" href="elements/cg-graph.html">
-</head>
-<body vertical layout fullbleed unresolved>
-    <core-header-panel flex>
-        <core-toolbar id="header">
-            <paper-icon-button src="images/dude_logo.png"></paper-icon-button>
-            <span flex></span>
-            <core-tooltip label="add a group">
-                <paper-icon-button icon="av:my-library-add"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="add a block">
-                <paper-icon-button icon="add-box"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="remove the selected groups and blocks">
-                <paper-icon-button disabled icon="delete"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="box selection">
-                <paper-icon-button icon="fullscreen"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="undo the last action">
-                <paper-icon-button icon="undo"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="redo the last action">
-                <paper-icon-button disabled icon="redo"></paper-icon-button>
-            </core-tooltip>
-        </core-toolbar>
-        <cg-graph theme="dude" url="examples/graph.json"></cg-graph>
-    </core-header-panel>
-</body>
-<!--<body>-->
-    <!--<cg-graph theme="dude" url="examples/graph.json"></cg-graph>-->
-<!--</body>-->
+    <head>
+        <title>CodeGraph</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+        <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+        <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="index.css">
+        <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+        <link rel="import" href="elements/cg-graph.html">
+        <link rel="import" href="elements/cg-toolbar.html">
+    </head>
+    <body vertical layout fullbleed unresolved>
+        <core-header-panel mode="seamed" flex>
+            <cg-toolbar logo="images/dude_logo.png"></cg-toolbar>
+            <cg-graph id="graph" theme="dude" url="examples/graph.json"></cg-graph>
+        </core-header-panel>
+    </body>
 </html>
