--- a/elements/cg-renderer.html
+++ b/elements/cg-renderer.html
@@ -4,19 +4,15 @@ to add blocks/groups, remove or move them.
 -->
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
-<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="../bower_components/paper-dialog/paper-action-dialog.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-input/paper-input.html">
 <style>
     #group {
         border-radius: 5px;
         font-family: "Varela Round", sans-serif;
     }
 </style>
-<polymer-element name="cg-graph" attributes="theme url">
+<polymer-element name="cg-renderer" attributes="theme url">
     <template>
-        <link rel="stylesheet" href="cg-graph.css">
+        <link rel="stylesheet" href="cg-renderer.css">
         <core-ajax id="config" url="themes/{{theme}}.json" handleAs="json"></core-ajax>
         <core-ajax id="data" url="{{url}}" handleAs="json"></core-ajax>
         <svg id="graph">
@@ -31,22 +27,6 @@ to add blocks/groups, remove or move them.
                 </feMerge>
             </filter>
         </svg>
-        <paper-toast id="error"></paper-toast>
-        <paper-action-dialog id="groupDialog" heading="Create a new group" transition="core-transition-top" backdrop>
-            <paper-input autofocus value="{{groupTitle}}" label="Group title"></paper-input>
-            <paper-button dismissive>Cancel</paper-button>
-            <paper-button on-click="{{createGroup}}" affirmative default>Create</paper-button>
-        </paper-action-dialog>
-        <paper-action-dialog id="actionDialog" heading="Add a new action" transition="core-transition-top" backdrop>
-            <paper-input autofocus value="{{model}}" label="Action model"></paper-input>
-            <div>
-                <template repeat="{{ model in modelList }}">
-                    <div>{{ model }}</div>
-                </template>
-            </div>
-            <paper-button dismissive>Cancel</paper-button>
-            <paper-button on-click="{{createAction}}" affirmative default>Create</paper-button>
-        </paper-action-dialog>
     </template>
     <!-- Vendors -->
     <script src="../bower_components/jwerty/jwerty.js"></script>
@@ -82,5 +62,5 @@ to add blocks/groups, remove or move them.
     <script src="../lib/renderer/render-connection.js"></script>
     <script src="../lib/serialization/json-saver.js"></script>
     <script src="../lib/serialization/json-loader.js"></script>
-    <script src="cg-graph.js"></script>
+    <script src="cg-renderer.js"></script>
 </polymer-element>
