--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -8,48 +8,39 @@
 <link rel="import" href="../bower_components/paper-dialog/paper-action-dialog.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="cg-toolbar.html">
 <polymer-element name="cg-app" attributes="logo">
     <template>
         <style>
-            #header {
+            core-toolbar {
                 color: #ddd;
                 background: #15202f;
-                /*background: rgb(21, 32, 52);*/
                 font-family: "Varela round", sans-serif;
                 border-bottom: 1px solid #ccc;
+            }
+
+            core-toolbar #text {
+                margin-left: 20px;
+                color: #ccc;
             }
 
             [disabled] {
                 opacity: 0.7;
             }
         </style>
-        <core-toolbar id="header">
-            <paper-icon-button src="{{logo}}"></paper-icon-button>
-            <span flex></span>
-            <core-tooltip label="add a group">
-                <paper-icon-button on-click="{{addGroup}}" icon="av:my-library-add"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="add a block">
-                <paper-icon-button on-click="{{addAction}}" icon="add-box"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="remove the selected groups and blocks">
-                <paper-icon-button on-click="{{removeSelectedNodes}}" icon="delete"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="undo the last action">
-                <paper-icon-button disabled icon="undo"></paper-icon-button>
-            </core-tooltip>
-            <core-tooltip label="redo the last action">
-                <paper-icon-button disabled icon="redo"></paper-icon-button>
-            </core-tooltip>
+        <cg-toolbar logo="{{logo}}" on-command="{{runCommand}}" hidden?="{{activeBar != 'tool'}}"></cg-toolbar>
+        <paper-toast id="error"></paper-toast>
+        <core-toolbar id="groupDialog" hidden?="{{activeBar != 'group'}}">
+            <input id="text" is="core-input" placeholder="Group title..." value="{{groupTitle}}" on-change="{{createGroup}}" autofocus?="{{activeBar == 'group'}}" flex>
+            <paper-icon-button on-click="{{createGroup}}" icon="check"></paper-icon-button>
         </core-toolbar>
         <content id="renderer" select="cg-renderer"></content>
-        <paper-toast id="error"></paper-toast>
-        <paper-action-dialog id="groupDialog" heading="Create a new group" transition="core-transition-top" backdrop>
-            <paper-input autofocus value="{{groupTitle}}" label="Group title"></paper-input>
-            <paper-button dismissive>Cancel</paper-button>
-            <paper-button on-click="{{createGroup}}" affirmative default>Create</paper-button>
-        </paper-action-dialog>
-        <paper-action-dialog id="actionDialog" heading="Add a new action" transition="core-transition-top" backdrop>
+        <!--<paper-action-dialog id="groupDialog" heading="Create a new group" transition="core-transition-top" backdrop>-->
+            <!--<paper-input autofocus value="{{groupTitle}}" label="Group title"></paper-input>-->
+            <!--<paper-button dismissive>Cancel</paper-button>-->
+            <!--<paper-button on-click="{{createGroup}}" affirmative default>Create</paper-button>-->
+        <!--</paper-action-dialog>-->
+        <paper-action-dialog id="blockDialog" heading="Add a new action" transition="core-transition-top" backdrop>
             <paper-input autofocus value="{{model}}" label="Action model"></paper-input>
             <div>
                 <template repeat="{{ model in modelList }}">
@@ -57,7 +48,7 @@
                 </template>
             </div>
             <paper-button dismissive>Cancel</paper-button>
-            <paper-button on-click="{{createAction}}" affirmative default>Create</paper-button>
+            <paper-button on-click="{{createBlock}}" affirmative default>Create</paper-button>
         </paper-action-dialog>
     </template>
     <script src="cg-app.js"></script>
