--- a/elements/cg-graph.html
+++ b/elements/cg-graph.html
@@ -73,6 +73,7 @@ to add blocks/groups, remove or move them.
     <script src="../lib/renderer/render/render-block.js"></script>
     <script src="../lib/renderer/render/render-group.js"></script>
     <script src="../lib/renderer/render/render-connection.js"></script>
+    <script src="../lib/renderer/render/render-point.js"></script>
     <!-- CodeGraph serialization -->
     <script src="../lib/serialization/json-saver.js"></script>
     <script src="../lib/serialization/json-loader.js"></script>
