Handle pickers rendering.

--- a/elements/cg-graph.html
+++ b/elements/cg-graph.html
@@ -60,6 +60,7 @@ to add blocks/groups, remove or move them.
     <script src="../lib/renderer/render/render-selection.js"></script>
     <script src="../lib/renderer/render/render-zoom.js"></script>
     <script src="../lib/renderer/render/render-block.js"></script>
+    <script src="../lib/renderer/render/render-picker.js"></script>
     <script src="../lib/renderer/render/render-group.js"></script>
     <script src="../lib/renderer/render/render-connection.js"></script>
     <script src="../lib/renderer/render/render-point.js"></script>
