Added simple drag for one entity

--- a/elements/cg-graph.html
+++ b/elements/cg-graph.html
@@ -59,6 +59,7 @@ to add blocks/groups, remove or move them.
     <script src="../lib/renderer/render/render.js"></script>
     <script src="../lib/renderer/render/render-selection.js"></script>
     <script src="../lib/renderer/render/render-zoom.js"></script>
+    <script src="../lib/renderer/render/render-drag.js"></script>
     <script src="../lib/renderer/render/render-block.js"></script>
     <script src="../lib/renderer/render/render-picker.js"></script>
     <script src="../lib/renderer/render/render-group.js"></script>
