Added draft for quadtree selection

--- a/elements/cg-graph.html
+++ b/elements/cg-graph.html
@@ -57,6 +57,7 @@ to add blocks/groups, remove or move them.
     <script src="../lib/renderer/utils/renderer-error.js"></script>
     <script src="../lib/renderer/utils/renderer-position.js"></script>
     <script src="../lib/renderer/utils/renderer-point.js"></script>
+    <script src="../lib/renderer/utils/renderer-select.js"></script>
     <script src="../lib/renderer/render/render.js"></script>
     <script src="../lib/renderer/render/render-selection.js"></script>
     <script src="../lib/renderer/render/render-zoom.js"></script>
