Fix css and selection

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body vertical layout fullbleed unresolved>
         <core-header-panel mode="seamed" flex>
             <cg-toolbar logo="images/dude_logo.png"></cg-toolbar>
-            <cg-graph id="graph" theme="dude" url="examples/graph.json"></cg-graph>
+            <cg-graph id="graph" theme="light" url="examples/graph.json"></cg-graph>
         </core-header-panel>
     </body>
 </html>
