Fix saver and improve audigame template.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body vertical layout fullbleed unresolved>
         <core-header-panel mode="seamed" flex>
             <cg-app logo="images/dude_logo.png">
-                <cg-renderer id="graph" theme="dude" url="examples/graph.json"></cg-renderer>
+                <cg-renderer id="graph" theme="audigame" url="examples/audigame.json"></cg-renderer>
             </cg-app>
         </core-header-panel>
     </body>
