--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -8,13 +8,30 @@
 <link rel="import" href="../bower_components/core-input/core-input.html">
 <link rel="import" href="cg-toolbar.html">
 <link rel="import" href="cg-inputbar.html">
-<polymer-element name="cg-app" attributes="logo">
+<link rel="import" href="cg-style.html">
+<link rel="import" href="cg-renderer.html">
+<polymer-element name="cg-app" attributes="logo theme graphUrl" extends="cg-style">
     <template>
-        <cg-toolbar logo="{{logo}}" on-command="{{runCommand}}" hidden?="{{activeBar != 'tool'}}"></cg-toolbar>
-        <cg-inputbar label="Group title..." value="{{groupTitle}}" on-submit="{{createGroup}}" on-close="{{showToolbar}}" hidden?="{{activeBar != 'group'}}">
+        <cg-toolbar logo="{{logo}}"
+                    styleUrl="../themes/{{theme}}/toolbar.css"
+                    on-command="{{runCommand}}"
+                    hidden?="{{activeBar != 'tool'}}">
+        </cg-toolbar>
+        <cg-inputbar label="Group title..."
+                     styleUrl="../themes/{{theme}}/toolbar.css"
+                     value="{{groupTitle}}"
+                     on-submit="{{createGroup}}"
+                     on-close="{{showToolbar}}"
+                     hidden?="{{activeBar != 'group'}}">
         </cg-inputbar>
-        <paper-toast id="error"></paper-toast>
-        <content id="renderer" select="cg-renderer"></content>
+        <paper-toast class="notification" id="error"></paper-toast>
+        <paper-toast class="notification" id="info"></paper-toast>
+        <paper-toast class="notification" id="success"></paper-toast>
+        <cg-renderer id="renderer"
+                     styleUrl="../themes/{{theme}}/graph.css"
+                     configUrl="themes/{{theme}}/config.json"
+                     graphUrl="{{graphUrl}}">
+        </cg-renderer>
         <paper-action-dialog id="blockDialog" heading="Add a new action" transition="core-transition-top" backdrop>
             <paper-input autofocus value="{{model}}" label="Action model"></paper-input>
             <div>
