--- a/elements/cg-inputbar.html
+++ b/elements/cg-inputbar.html
@@ -1,4 +1,5 @@
-<polymer-element name="cg-inputbar" attributes="label value ">
+<link rel="import" href="cg-style.html">
+<polymer-element name="cg-inputbar" attributes="label value" extends="cg-style">
     <link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
     <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
     <template>
