--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <link rel="stylesheet" href="index.css">
         <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
         <link rel="import" href="elements/cg-app.html">
-        <link rel="import" href="elements/cg-renderer.html">
     </head>
     <body vertical layout fullbleed unresolved>
         <core-header-panel mode="seamed" flex>
-            <cg-app logo="images/dude_logo.png">
-                <cg-renderer id="graph" theme="audigame" url="examples/audigame.json"></cg-renderer>
+            <cg-app logo="images/dude_logo.png"
+                    graphUrl="examples/graph.json"
+                    theme="dude">
             </cg-app>
         </core-header-panel>
     </body>
