--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </head>
     <body vertical layout fullbleed unresolved>
         <core-header-panel mode="seamed" flex>
-            <cg-app logo="images/dude_logo.png"
+            <cg-app logo="images/dude_logo_dark.png"
                     graphUrl="examples/graph.json"
-                    theme="dude">
+                    theme="light">
             </cg-app>
         </core-header-panel>
     </body>
