Fix call action and light theme connection selection

--- a/elements/cg-app.html
+++ b/elements/cg-app.html
@@ -27,7 +27,7 @@
         <cg-inputbar label="Search block..."
                      styleUrl="../themes/{{theme}}/toolbar.css"
                      value="{{groupTitle}}"
-                     on-submit="{{createGroup}}"
+                     on-submit="{{createBlock}}"
                      on-close="{{showToolbar}}"
                      hidden?="{{activeBar != 'block'}}">
         </cg-inputbar>
