--- a/elements/cg-toolbar.html
+++ b/elements/cg-toolbar.html
@@ -27,8 +27,8 @@
             <cg-toolbar-command label="add a block" icon="add-box" command="addBlock"></cg-toolbar-command>
             <cg-toolbar-command label="remove the selected groups and blocks" icon="delete" command="removeSelection"></cg-toolbar-command>
             <cg-toolbar-command label="zoom to best fit all elements" icon="image:crop-free" command="zoomToFit"></cg-toolbar-command>
-            <cg-toolbar-command label="undo the last action" icon="undo" command="undo"></cg-toolbar-command>
-            <cg-toolbar-command label="redo the last action" icon="redo" command="redo" disabled></cg-toolbar-command>
+            <!--<cg-toolbar-command label="undo the last action" icon="undo" command="undo"></cg-toolbar-command>-->
+            <!--<cg-toolbar-command label="redo the last action" icon="redo" command="redo" disabled></cg-toolbar-command>-->
         </core-toolbar>
     </template>
     <script>
